# SmartLabSys

./: CMakeLists.txt  README.md  index.html  main.cpp
src/db/: DBManager.hpp
src/llm/: AITaskQueue.hpp  BaseLLM.h  DeepSeekProvider.hpp  OllamaProvider.hpp  QwenVisionProvider.hpp
src/network/: Acceptor.cpp  Acceptor.h  Channel.cpp  Channel.h  Connection.cpp  Connection.h  EpollPoller.cpp  EpollPoller.h  EventLoop.cpp  EventLoop.h  EventLoopThreadPool.hpp  HttpResponse.hpp  TcpServer.cpp  TcpServer.h
src/vision/: VisionManager.hpp
